Add ignorelist clear cmd
Fixes #142